--- a/QJY.WEB/ViewV5/AppPage/CRM/GJJL.html
+++ b/QJY.WEB/ViewV5/AppPage/CRM/GJJL.html
@@ -92,5 +92,5 @@
                 return callback.call(this, result);
             });
         }
-    });//@ sourceURL=GJJL.js;
+    });//# sourceURL=GJJL.js;
 </script>
