--- a/QJY.WEB/ViewV5/AppPage/CRM/ZDCRMLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/CRM/ZDCRMLIST.html
@@ -170,5 +170,5 @@
             tempindex.zditem = tempindex.ZiDianData;
         }
     })
-    //# sourceURL=ZDCRMLIST.js;
+    //# sourceURLZDCRMLIST.js;
 </script>
