--- a/QJY.WEB/ViewV5/AppPage/DBGL/DBGLLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/DBGL/DBGLLIST.html
@@ -180,5 +180,5 @@
             $(this).attr("href", '/API/VIEWAPI.ashx?Action=DBGL_DBDOWNLOAD&P1=' + id);
         }
     })
-    //# sourceURL=DBGLLIST
+    //# sourceURLDBGLLIST
 </script>
