--- a/QJY.WEB/ViewV5/AppPage/GZBG/GZBGTJ.html
+++ b/QJY.WEB/ViewV5/AppPage/GZBG/GZBGTJ.html
@@ -144,5 +144,5 @@
         tempindex.$watch("curMonth", function (a, b) {
             tempindex.GetLIST();
         })
-        //@ sourceURL=CCXJBRANCH.js;
+        //# sourceURL=CCXJBRANCH.js;
     </script>
