--- a/QJY.WEB/ViewV5/AppPage/JFBX/JFBX.html
+++ b/QJY.WEB/ViewV5/AppPage/JFBX/JFBX.html
@@ -273,5 +273,5 @@
         if (!tempmodel.modelData.ID) {
             localStorage.setItem(pmodel.FormCode, JSON.stringify(tempmodel.modelData.$model));
         }
-    })  //@ sourceURL=JFBX.js;
+    })  //# sourceURL=JFBX.js;
 </script>
