--- a/QJY.WEB/ViewV5/AppPage/LCSP/APP_WF_LCSZ.html
+++ b/QJY.WEB/ViewV5/AppPage/LCSP/APP_WF_LCSZ.html
@@ -301,7 +301,7 @@
         avalon.ready(function () {
             tempindex.InitWigetData();
         });
-        //# sourceURL=LCSZ.js;
+        //# sourceURLLCSZ.js;
     </script>
 </body>
 </html>
