--- a/QJY.WEB/ViewV5/AppPage/LCSP/LCSPTJ_BAK.html
+++ b/QJY.WEB/ViewV5/AppPage/LCSP/LCSPTJ_BAK.html
@@ -168,5 +168,5 @@
                 ComFunJS.winviewformright("/ViewV5/AppPage/LCSP/LCSPTJLIST.html?id=" + tempindex.curLeiBie + "&username=" + username + "&year=" + year + "&month=" + month, "工作流程详情", "1000");
             }
         })
-        //@ sourceURL=LCSPTJ.js;
+        //# sourceURL=LCSPTJ.js;
     </script>
