--- a/QJY.WEB/ViewV5/AppPage/LCSP/PROCESS.html
+++ b/QJY.WEB/ViewV5/AppPage/LCSP/PROCESS.html
@@ -46,7 +46,7 @@
                 return callback.call(this, result);
             });
         }
-    });//@ sourceURL=PROCESS.js;
+    });//# sourceURL=PROCESS.js;
 </script>
 <div class="form-horizontal" ms-controller="ZiDian" style="margin-top: 50px;">
     <div class="form-group">
