--- a/QJY.WEB/ViewV5/AppPage/QYWD/QYWD.html
+++ b/QJY.WEB/ViewV5/AppPage/QYWD/QYWD.html
@@ -474,7 +474,7 @@
                 tempindex.GetListData(tempindex.itemtype);
             }
         }
-    });//@ sourceURL=APP_GEWD.js;
+    });//# sourceURL=APP_GEWD.js;
 
 
 </script>
