--- a/QJY.WEB/ViewV5/AppPage/QYWD/QYWDGL.html
+++ b/QJY.WEB/ViewV5/AppPage/QYWD/QYWDGL.html
@@ -837,6 +837,6 @@
                 tempindex.GetListData(tempindex.itemtype);
             }
         }
-    });//@ sourceURL=APP_QYWD.js;
+    });//# sourceURL=APP_QYWD.js;
 
 </script>
