--- a/QJY.WEB/ViewV5/AppPage/QYWD/QYWDGX.html
+++ b/QJY.WEB/ViewV5/AppPage/QYWD/QYWDGX.html
@@ -373,7 +373,7 @@
                 tempindex.GetListData(tempindex.itemtype);
             }
         }
-    });//@ sourceURL=APP_QYWDGX.js;
+    });//# sourceURL=APP_QYWDGX.js;
 
 
 </script>
