--- a/QJY.WEB/ViewV5/AppPage/QYWD/Share.html
+++ b/QJY.WEB/ViewV5/AppPage/QYWD/Share.html
@@ -534,7 +534,7 @@
                     }
                 })
             }
-        });//@ sourceURL=APP_QYWD.js;
+        });//# sourceURL=APP_QYWD.js;
         avalon.ready(function () {
             if (!ComFunJS.getQueryString("ID", "")) {
                 ComFunJS.winwarning("请检查分享链接是否完整！");
