--- a/QJY.WEB/ViewV5/AppPage/RWGL/RWGLVIEW.html
+++ b/QJY.WEB/ViewV5/AppPage/RWGL/RWGLVIEW.html
@@ -76,6 +76,6 @@
                 }, function () { })
             }
         });
-        //# sourceURL=RWGLVIEW.js;
+        //# sourceURLRWGLVIEW.js;
     </script>
 </div>
