--- a/QJY.WEB/ViewV5/AppPage/TXL/QYTXLLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/TXL/QYTXLLIST.html
@@ -252,5 +252,5 @@
         if (event.keyCode == 13 || event.keyCode == 10) {
             tempindex.GetUserList();
         }
-    }//@ sourceURL=YGINDEX.js;
+    }//# sourceURL=YGINDEX.js;
 </script>
