--- a/QJY.WEB/ViewV5/AppPage/XTGL/XTGL_INIT.html
+++ b/QJY.WEB/ViewV5/AppPage/XTGL/XTGL_INIT.html
@@ -130,67 +130,9 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="ContactUser" class="col-xs-2 control-label text-right">企业联系人</label>
+                        <label for="Address" class="col-xs-2 control-label text-right">FileServerUrl</label>
                         <div class="col-xs-6">
-                            <input type="text" class="form-control" id="ContactUser" ms-duplex="CompanyData.ContactUser" placeholder="请输入企业联系人" />
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="Position" class="col-xs-2 control-label text-right">职务</label>
-                        <div class="col-xs-6">
-                            <input type="text" class="form-control" id="Position" ms-duplex="CompanyData.Position" placeholder="请输入职务" />
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="Mobile" class="col-xs-2 control-label text-right">联系电话</label>
-                        <div class="col-xs-6">
-                            <input type="text" class="form-control " id="Mobile" ms-duplex="CompanyData.Mobile" placeholder="请输入移动电话" />
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="ContactUser" class="col-xs-2 control-label text-right">系统负责人</label>
-                        <div class="col-xs-6">
-                            <input type="text" class="form-control" id="FZR" ms-duplex="CompanyData.FZR" placeholder="请输入负责人联系人" />
-                        </div>
-                        <a href="###" ms-click="up(0)" style="color:cornflowerblue">同上</a>
-                    </div>
-                    <div class="form-group">
-                        <label for="ContactUser" class="col-xs-2 control-label text-right">负责人电话</label>
-                        <div class="col-xs-6">
-                            <input type="text" class="form-control" id="FZR" ms-duplex="CompanyData.FZRDH" placeholder="请输入负责人电话" />
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="ContactUser" class="col-xs-2 control-label text-right">财务联系人</label>
-                        <div class="col-xs-6">
-                            <input type="text" class="form-control" id="FinanceLXR" ms-duplex="CompanyData.FinanceLXR" placeholder="请输入财务联系人" />
-                        </div>
-                        <a href="###" ms-click="up(1)" style="color:cornflowerblue">同上</a>
-                    </div>
-                    <div class="form-group">
-                        <label for="ContactUser" class="col-xs-2 control-label text-right">财务联系电话</label>
-                        <div class="col-xs-6">
-                            <input type="text" class="form-control" id="FinanceLXR" ms-duplex="CompanyData.FLXRDH" placeholder="请输入财务联系电话" />
-                        </div>
-                    </div>
-         
-                    <div class="form-group">
-                        <label for="TelPhone" class="col-xs-2 control-label text-right">公司电话</label>
-                        <div class="col-xs-6">
-                            <input type="text" class="form-control" id="TelPhone" ms-duplex="CompanyData.TelPhone" placeholder="请输入公司电话" />
-                        </div>
-                    </div>
-                
-                    <div class="form-group">
-                        <label for="Email" class="col-xs-2 control-label text-right">电子邮件</label>
-                        <div class="col-xs-6">
-                            <input type="text" class="form-control" id="Email" ms-duplex="CompanyData.Email" placeholder="请输入电子邮件" />
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="Address" class="col-xs-2 control-label text-right">地址</label>
-                        <div class="col-xs-6">
-                            <input type="text" class="form-control" ms-duplex="CompanyData.Address" id="Address" placeholder="请输入通讯地址" />
+                            <input type="text" class="form-control" ms-duplex="CompanyData.FileServerUrl" id="Address" placeholder="文档服务器地址" />
                         </div>
                     </div>
                     <div class="form-group">
