--- a/QJY.WEB/ViewV5/AppPage/XTGL/YGGL.html
+++ b/QJY.WEB/ViewV5/AppPage/XTGL/YGGL.html
@@ -89,7 +89,7 @@
             tempmodel.seltype = type;
         }
     });
-    //# sourceURL=YGGL
+    //# sourceURLYGGL
 </script>
 <div class="form-horizontal" ms-controller="YGGLAdd">
     <div style="margin: 0 80px;">
