--- a/QJY.WEB/ViewV5/AppPage/XXFB/XXFB.html
+++ b/QJY.WEB/ViewV5/AppPage/XXFB/XXFB.html
@@ -251,7 +251,7 @@
         setTimeout("ComFunJS.initForm()", 500)
 
     })
-    //@ sourceURL=XXFB.js;
+    //# sourceURL=XXFB.js;
 </script>
 
 <style>
