--- a/QJY.WEB/ViewV5/AppPage/XXFB/XXFBSC.html
+++ b/QJY.WEB/ViewV5/AppPage/XXFB/XXFBSC.html
@@ -387,5 +387,5 @@
         um.setContent(content);
         setTimeout("ComFunJS.initForm()", 500)
 
-    })  //@ sourceURL=XXFBSC.js;
+    })  //# sourceURL=XXFBSC.js;
 </script>
