--- a/QJY.WEB/ViewV5/AppPage/XXFB/XXFB_WF.html
+++ b/QJY.WEB/ViewV5/AppPage/XXFB/XXFB_WF.html
@@ -395,7 +395,7 @@
         if (YLUrl) {
             window.location = YLUrl;
         }
-    } //@ sourceURL=XXFBWF.js;
+    } //# sourceURL=XXFBWF.js;
 
 
 </script>
