--- a/QJY.WEB/ViewV5/AppPage/XXFB/XXTYPE.html
+++ b/QJY.WEB/ViewV5/AppPage/XXFB/XXTYPE.html
@@ -141,5 +141,5 @@
             tempmodel.modelData.ISzjfb = !tempmodel.modelData.ISzjfb;
         }
     });
-    //@ sourceURL=XXTYPETEMP.js;
+    //# sourceURL=XXTYPETEMP.js;
 </script>
