--- a/QJY.WEB/ViewV5/AppPage/XZGL/XZGLVIEW.html
+++ b/QJY.WEB/ViewV5/AppPage/XZGL/XZGLVIEW.html
@@ -153,7 +153,7 @@
         avalon.ready(function () {
             tempindex.GetList();
         })
-        //# sourceURL=ffjlview.js
+        //# sourceURLffjlview.js
     </script>
 </body>
 
