--- a/QJY.WEB/ViewV5/Base/ZDLIST.html
+++ b/QJY.WEB/ViewV5/Base/ZDLIST.html
@@ -146,5 +146,5 @@
             tempindex.zditem = tempindex.ZiDianData;
         }
     })
-    //# sourceURL=ZDLIST.js;
+    //# sourceURLZDLIST.js;
 </script>
