--- a/QJY.WEB/View_Mobile/UI/BASE/APP_MOBILE_APPLIST.html
+++ b/QJY.WEB/View_Mobile/UI/BASE/APP_MOBILE_APPLIST.html
@@ -89,7 +89,7 @@
         })
         avalon.ready(function () {
             model.GetAPPList()
-        })//@ sourceURL=APPLIST.js;
+        })//# sourceURL=APPLIST.js;
     </script>
 </body>
 </html>
