--- a/QJY.WEB/View_Mobile/UI/UI_PROCESS.html
+++ b/QJY.WEB/View_Mobile/UI/UI_PROCESS.html
@@ -304,7 +304,7 @@
             })
         }
 
-        //@ sourceURL=PROCESS.js;
+        //# sourceURL=PROCESS.js;
     </script>
 </head>
 <body>
