--- a/QJY.WEB/View_Mobile/UI/UI_QYTXL_INFO.html
+++ b/QJY.WEB/View_Mobile/UI/UI_QYTXL_INFO.html
@@ -113,7 +113,7 @@
         //初始化微信配置
         ComFunJS.initwxConfig();
     })
-    //# sourceURL=TXLUSERINFO.js;
+    //# sourceURLTXLUSERINFO.js;
 </script>
 
 <!--</body>
