--- a/QJY.WEB/View_Mobile/UI/UI_QYTXL_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_QYTXL_LIST.html
@@ -331,7 +331,7 @@
             //初始化微信配置
             ComFunJS.initwxConfig();
         })
-        //# sourceURL=qytxllist.js;
+        //# sourceURLqytxllist.js;
     </script>
     <style type="text/css">
         .search-all {
