--- a/QJY.WEB/ViewV5/AppPage/CRM/XZLXRLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/CRM/XZLXRLIST.html
@@ -191,7 +191,7 @@
                 return false;
             }
         }
-        //@ sourceURL=CCXJUserLIST.js;
+        //# sourceURL=CCXJUserLIST.js;
     </script>
 </body>
 
