--- a/QJY.WEB/ViewV5/AppPage/LCSP/LCSP.html
+++ b/QJY.WEB/ViewV5/AppPage/LCSP/LCSP.html
@@ -64,7 +64,7 @@
                 return callback.call(this, result);
             });
         }
-    });//@ sourceURL=LCSP.js;
+    });//# sourceURL=LCSP.js;
 
 
 </script>
