--- a/QJY.WEB/ViewV5/AppPage/XXZX/XXZXVIEW.html
+++ b/QJY.WEB/ViewV5/AppPage/XXZX/XXZXVIEW.html
@@ -27,7 +27,7 @@
                 }
             }
         });
-        //# sourceURL=RWGLVIEW.js;
+        //# sourceURLRWGLVIEW.js;
     </script>
 </div>
 
