--- a/QJY.WEB/ViewV5/AppPage/XZGL/FFJLVIEW.html
+++ b/QJY.WEB/ViewV5/AppPage/XZGL/FFJLVIEW.html
@@ -187,7 +187,7 @@
         avalon.ready(function () {
             tempindex.GetList();
         })
-        //# sourceURL=ffjlview.js
+        //# sourceURLffjlview.js
     </script>
 </body>
 
