继续完善,修复苹果手机可能出现的Bug

--- a/QJY.WEB/ViewV5/AppPage/Loading.html
+++ b/QJY.WEB/ViewV5/AppPage/Loading.html
@@ -3,7 +3,7 @@
     .szhlloading {
         width: 60px;
         height: 60px;
-        background-color: #67CF22;
+        background-color: #12b8f6;
         margin: 100px auto;
         -webkit-animation: rotateplane 1.2s infinite ease-in-out;
         animation: rotateplane 1.2s infinite ease-in-out;
