--- a/QJY.WEB/View_Mobile/UI/RLZY/index.html
+++ b/QJY.WEB/View_Mobile/UI/RLZY/index.html
@@ -164,7 +164,7 @@
         </div>
     </div>-->
     <script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-    <script src="/View_Mobile/JS/avalon.mobile.min.js"></script>
+    <script src="/View_Mobile/JS/avalon1.47.js"></script>
     <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160425"></script>
     <script type="text/javascript">
         var model = avalon.define({
