--- a/QJY.WEB/View_Mobile/UI/KQQD.html
+++ b/QJY.WEB/View_Mobile/UI/KQQD.html
@@ -51,7 +51,7 @@
     </div>
     <script src="/View_Mobile/JS/layer/layer.m.js"></script>
     <script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-    <script src="/View_Mobile/JS/avalon.mobile.min.js"></script>
+    <script src="/View_Mobile/JS/avalon1.47.js"></script>
     <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160603"></script>
     <script language="javascript" src="http://webapi.amap.com/maps?v=1.3&key=00fe526c7af6452674306b68a5cc8590"></script>
     <script>
