--- a/QJY.WEB/ViewV5/Base/UploadTX.html
+++ b/QJY.WEB/ViewV5/Base/UploadTX.html
@@ -23,19 +23,20 @@
         swfobject.addDomLoadEvent(function () {
             var swf = new fullAvatarEditor("swfContainer", {
                 id: 'swf',
-                upload_url: '/ViewV5/Base/UploadTX.ashx?Action=TX&UserName=' + parent.ComFunJS.getCookie('username'),
+                upload_url: '/ToolS/UploadTX.ashx?Action=TX&UserName=' + ComFunJS.getCookie('username'),
                 tab_visible: false
             }, function (msg) {
-                if (msg.content)
-                {
-                    
-                    top.location.reload();
-                    top.ComFunJS.winsuccess("操作成功");
-                    top.layer.closeAll();
+                switch (msg.code) {
+                    case 5:
+                        if (msg.type == 0) {
+                            top.ComFunJS.winsuccess("操作成功");
+                            top.location.reload();
+                        }
+                        break;
                 }
             }
             );
-       
+
         });
     </script>
     <script>
