修复IPHONE上传图片不现实的BUG

--- a/QJY.WEB/View_Mobile/UI/BASE/APP_MOBIL_WF.html
+++ b/QJY.WEB/View_Mobile/UI/BASE/APP_MOBIL_WF.html
@@ -357,9 +357,9 @@
     <script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm.min.js' charset='utf-8'></script>
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm-extend.min.js' charset='utf-8'></script>
-    <script src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
+    <script src="//res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
     <script src="/View_Mobile/JS/avalon1.47.js"></script>
-    <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160730"></script>
+    <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160717"></script>
     <script src="/View_Mobile/JS/raty/jquery.raty.js?v=1.3"></script>
     <script src="/ViewV5/JS/WFJS.js?ver=20170326"></script>
     <script language="javascript" src="http://webapi.amap.com/maps?v=1.3&key=00fe526c7af6452674306b68a5cc8590"></script>
