--- a/QJY.WEB/ViewV5/AppPage/XXFB/XXTYPE.html
+++ b/QJY.WEB/ViewV5/AppPage/XXFB/XXTYPE.html
@@ -14,7 +14,7 @@
         margin-bottom: 20px;
     }
 </style>
-<link rel="stylesheet" href="http://at.alicdn.com/t/font_1468812105_88105.css"><div class="form-horizontal" ms-controller="XXTYPE">
+<div class="form-horizontal" ms-controller="XXTYPE">
     <div style="margin: 0 80px;">
         <div>
             <ul class="clearfix" style="display: block;padding:0">
@@ -52,7 +52,7 @@
                             <div class="icheckbox_square-blue mr5" ms-class-1="checked:modelData.ISzjfb">
                                 <span class="iconfont icon-check ft12"></span>
                             </div>审核通过直接发布
-                        </label> 
+                        </label>
                     </div>
                 </li>
                 <li class="add-item add-widthall" ms-visible="modelData.IsCheck==true&&curAddType!='parent'">
