--- a/QJY.WEB/WZWeb/history.html
+++ b/QJY.WEB/WZWeb/history.html
@@ -318,7 +318,6 @@
         <div class="topbar">
             <div class="content">
                 <div class="logo">
-
                 </div>
                 <ul class="menu">
                     <li><a href="http://www.qijiekeji.com/">首页</a> </li>
@@ -328,11 +327,11 @@
                 </ul>
             </div>
         </div>
-        <div class="explain" style="top:80px">
+        <div class="explain" style="top: 80px">
             <h1 id="h1">更新记录</h1>
             <h2>不断完善,优化无止境</h2>
         </div>
-        <div class="banner" style="height:200px">
+        <div class="banner" style="height: 200px">
         </div>
     </div>
     <div class="social">
@@ -412,8 +411,25 @@
 
 
             <ul class="timeline">
-   <li>
-                    <div class="time">2017-06-22</div><div class="version">v1.1.6</div><div class="number"></div><div class="content">
+                <li>
+                    <div class="time">2017-09-02</div>
+                    <div class="version">v1.1.7</div>
+                    <div class="number"></div>
+                    <div class="content">
+                        <pre>
++统一PC端引用的阿里样式文件
++解决了IPHONE不能正常上传图片的Bug
++流程管理里加了抄送管理,可以在流程过程更新抄送人
++工作区可以支持独立的IFRAME页面了
+                            
+</pre>
+                    </div>
+                </li>
+                <li>
+                    <div class="time">2017-06-22</div>
+                    <div class="version">v1.1.6</div>
+                    <div class="number"></div>
+                    <div class="content">
                         <pre>
 +工作流程下一步流程还是当前人时自动跳过(PC+微信)
 +工作流程设置流程可见范围时可以设置到角色不在必须设定到人了（PC）
@@ -428,7 +444,10 @@
                     </div>
                 </li>
                 <li>
-                    <div class="time">2017-05-12</div><div class="version">v1.1.5</div><div class="number"></div><div class="content">
+                    <div class="time">2017-05-12</div>
+                    <div class="version">v1.1.5</div>
+                    <div class="number"></div>
+                    <div class="content">
                         <pre>
 +工作流程新增流程分类功能,可以按照类别新增或查询工作流程(PC+微信)
 +工作流程中未审批的表单发起人可以选择撤回到草稿箱里（PC）
@@ -443,8 +462,11 @@
 </pre>
                     </div>
                 </li>
-              <li>
-                    <div class="time">2016-11-28</div><div class="version">v1.1.4</div><div class="number"></div><div class="content">
+                <li>
+                    <div class="time">2016-11-28</div>
+                    <div class="version">v1.1.4</div>
+                    <div class="number"></div>
+                    <div class="content">
                         <pre>
 +修复手机端出现NOSESSIONCODE无法进入应用得情况
 +修复个人中心数据无法保存得Bug
@@ -456,7 +478,10 @@
                     </div>
                 </li>
                 <li>
-                    <div class="time">2016-11-20</div><div class="version">v1.1.3</div><div class="number"></div><div class="content">
+                    <div class="time">2016-11-20</div>
+                    <div class="version">v1.1.3</div>
+                    <div class="number"></div>
+                    <div class="content">
                         <pre>
 +修复注册用户必须PC登录后才能使用微信端的问题
 +修复遮罩层容易乱跑的问题
@@ -467,7 +492,10 @@
                 </li>
 
                 <li>
-                    <div class="time">2016-11-19</div><div class="version">v1.1.2</div><div class="number"></div><div class="content">
+                    <div class="time">2016-11-19</div>
+                    <div class="version">v1.1.2</div>
+                    <div class="number"></div>
+                    <div class="content">
                         <pre>
 +添加MP4播放功能
 +添加TokenCode验证机制,页面超时处理
@@ -479,7 +507,10 @@
                 </li>
 
                 <li>
-                    <div class="time">2016-11-12</div><div class="version">v1.1.1</div><div class="number"></div><div class="content">
+                    <div class="time">2016-11-12</div>
+                    <div class="version">v1.1.1</div>
+                    <div class="number"></div>
+                    <div class="content">
                         <pre>
 +添加日志模块，添加日志批量删除功能，添加获取操作者IP功能，日志包括登录日志和操作日志
 +修复手机端错误信息提示的Bug
@@ -490,7 +521,10 @@
                     </div>
                 </li>
                 <li>
-                    <div class="time">2016-11-5</div><div class="version">v1.1.0</div><div class="number"></div><div class="content">
+                    <div class="time">2016-11-5</div>
+                    <div class="version">v1.1.0</div>
+                    <div class="number"></div>
+                    <div class="content">
                         <pre>
 1、系统采用纯HTML+Ashx开发，好处就不用多说了，终于可以摆脱控件那一大堆要命的东西了
 2、不管是微信端还是PC端，前端采用现在流行的MVC框架(avalon,这个类似大名鼎鼎的angularjs)和Jquery配合开发，简直不能更酸爽了
@@ -501,8 +535,8 @@
                 </li>
             </ul>
 
-            <div style="margin-left:180px;display:none">
-                <button id="fetchNextData" class="btn btn-large btn-info" style="width:100%;">后二十条数据</button>
+            <div style="margin-left: 180px; display: none">
+                <button id="fetchNextData" class="btn btn-large btn-info" style="width: 100%;">后二十条数据</button>
             </div>
             <br />
             <br />
@@ -527,30 +561,33 @@
             <div id="close_im" class="close-im"><a href="javascript:void(0);" title="点击关闭">&nbsp;</a></div>
             <a href="http://wpa.qq.com/msgrd?v=3&uin=2041612083&site=qq&menu=yes" target="_blank" class="im-qq qq-a" title="在线QQ客服">
                 <div class="qq-container"></div>
-                <div class="qq-hover-c"><img class="img-qq" src="/WZWeb/images/qq.png"></div>
-                <span> QQ在线咨询</span>
+                <div class="qq-hover-c">
+                    <img class="img-qq" src="/WZWeb/images/qq.png"></div>
+                <span>QQ在线咨询</span>
             </a>
             <div class="im-tel">
                 <div>交流群</div>
                 <div class="tel-num">
-                    <a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=3fae4115208695ccafae44d39a8ff1993c76dce5f6736f70030a0f6609391704"><img border="0" src="http://pub.idqqimg.com/wpa/images/group.png" alt="企业号源码交流群" title="企业号源码交流群"></a>
+                    <a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=3fae4115208695ccafae44d39a8ff1993c76dce5f6736f70030a0f6609391704">
+                        <img border="0" src="http://pub.idqqimg.com/wpa/images/group.png" alt="企业号源码交流群" title="企业号源码交流群"></a>
                 </div>
                 <div>咨询QQ</div>
                 <div class="tel-num"><a href="http://wpa.qq.com/msgrd?v=3&uin=2041612083&site=qq&menu=yes" target="_blank" class="" title="在线QQ">2041612083</a></div>
 
 
             </div>
-            <div class="im-footer" style="position:relative">
+            <div class="im-footer" style="position: relative">
                 <div class="weixing-container">
                     <div class="weixing-show">
-                        <div class="weixing-txt">微信扫一扫<br>体验企业号</div>
+                        <div class="weixing-txt">微信扫一扫<br>
+                            体验企业号</div>
                         <img class="weixing-ma" src="/WZWeb/images/qrcode.jpg">
                         <div class="weixing-sanjiao"></div>
                         <div class="weixing-sanjiao-big"></div>
                     </div>
                 </div>
-                <div class="go-top"><a href="javascript:;" title="返回顶部"></a> </div>
-                <div style="clear:both"></div>
+                <div class="go-top"><a href="javascript:;" title="返回顶部"></a></div>
+                <div style="clear: both"></div>
             </div>
         </div>
     </div>
