--- a/QJY.WEB/View_Mobile/UI/BASE/APP_MOBIL_WF.html
+++ b/QJY.WEB/View_Mobile/UI/BASE/APP_MOBIL_WF.html
@@ -224,7 +224,7 @@
                         </label>
                     </div>
                     <div class="weui_cell_bd weui_cell_primary">
-                        <input type="text" id="conCSR" placeholder="请选择抄送人" ms-duplex="CSUser" class="weui_input szhl szhl_getPeoples" />
+                        <input type="text" id="conCSRNEW" placeholder="请选择抄送人" ms-duplex="CSUser" class="weui_input szhl szhl_getPeoples" />
                     </div>
                     <span class="icon icon-caret" ms-if="CSQKData.size()>0" ms-click="showcsdata()"></span>
 
