--- a/QJY.WEB/View_Mobile/UI/UI_LCSP_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_LCSP_LIST.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿G<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -320,7 +320,7 @@
                         if (r.ErrorMsg == "") {
                             if (r.Result.length > 0) {
                                 model.shNum = r.Result[0].QTY;
-                            } else {
+                            } else {                           
                                 model.shNum = 0;
                             }
                         }
